fonts changed to Bitcount Prop Single

--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Diary</title>
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bitcount+Prop+Single:wght@100..900&display=swap" rel="stylesheet">
   <style>
     :root {
       --main-width: 95%;
       --max-width: 600px;
     }
-
     body {
-      font-family: sans-serif;
+      font-family: 'Bitcount Prop Single';
       background-color: white;
       color: black;
       transition: background-color 0.3s, color 0.3s;
