'insights' html was deleted but added.

--- a/public/index.html
+++ b/public/index.html
@@ -98,6 +98,7 @@ ul {
   <h1>Diary</h1>
   <br><br>
 
+<div id="insights" style="margin: 40px auto; text-align: center; max-width: 600px;"></div>
   <label for="date">Date:</label>
   <input type="date" id="date">
   <br><br>
