--- a/public/index.html
+++ b/public/index.html
@@ -57,6 +57,10 @@
       box-sizing: border-box;
       font-size: 1em;
     }
+    /*error 対応*/
+    input.error, select.error, textarea.error {
+  border: 2px solid green;
+}
 
 
     section {
